# src/server.ts
@@ -3,12 +3,12 @@ import { connectWithMongoDB } from "./config/mongo.db.config";
 import { connectRedis } from "./config/redis.db.config";
 
 const start = async () => {
+    const port = process.env.PORT || 5000;
     await connectRedis();
     connectWithMongoDB();
 
-
-    app.listen(3000, () => {
-        console.log("Listening on port 3000");
+    app.listen(port, () => {
+        console.log(`API running on ${port}`);
     });
 };
 
