# src/swagger.json
@@ -8,7 +8,7 @@
             "name": "MIT"
         }
     },
-    "host": "localhost:3000",
+    "host": "localhost:5000",
     "basePath": "/api",
     "tags": [
         {
@@ -379,7 +379,7 @@
                 "produces": ["application/json", "application/xml"],
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "userId",
                         "in": "path",
                         "description": "Id that need to be updated",
                         "required": true,
@@ -410,7 +410,7 @@
                 "produces": ["application/json", "application/xml"],
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "userId",
                         "in": "path",
                         "description": "Id that need to be Delete",
                         "required": true,
